--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,15 @@
 <body style="padding-top: 3rem;">
 
 <div class="container">
-  <button class="btn" id="increment">2 / 3 / 4 / 5 / 6</button>
-  <!-- <button class="btn" id="zero">7 / 8 / 9</button> -->
-  <button class="btn" id="decrement">10 / J / Q / K / A</button>
+  <button class="btn" id="c_2">2</button>
+  <button class="btn" id="c_3">3</button>
+  <button class="btn" id="c_4">4</button>
+  <button class="btn" id="c_5">5</button>
+  <button class="btn" id="c_6">6</button>
+  <button class="btn" id="c_7">7</button>
+  <button class="btn" id="c_8">8</button>
+  <button class="btn" id="c_9">9</button>
+  <button class="btn" id="c_10">10 / J / Q / K / A</button>
   <pre></pre>
 </div>
 
