--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
   <button class="btn" id="c_9">9</button>
   <button class="btn" id="c_10">10 / J / Q / K / A</button>
   <pre></pre>
+
+  <img src=<%=require("./static_table.png").default%> width="50%"/>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
