--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,17 @@
 <body style="padding-top: 3rem;">
 
 <div class="container">
+  <span>DECKS: 6</span><br/>
+  <span style="margin-right: 17px; margin-left: 17px;">2</span>
+  <span style="margin-right: 14px; margin-left: 14px;">4</span>
+  <span style="margin-right: 14px; margin-left: 14px;">24</span>
+  <span style="margin-right: 14px; margin-left: 14px;">8</span>
+  <span style="margin-right: 10px; margin-left: 14px;">10</span>
+  <span style="margin-right: 10px; margin-left: 14px;">12</span>
+  <span style="margin-right: 10px; margin-left: 14px;">20</span>
+  <span style="margin-right: 14px; margin-left: 14px;">20</span>
+  <span style="margin-right: 14px; margin-left: 54px;">20</span>
+  <br/>
   <button class="btn" id="c_2">2</button>
   <button class="btn" id="c_3">3</button>
   <button class="btn" id="c_4">4</button>
@@ -20,6 +31,7 @@
   <button class="btn" id="c_8">8</button>
   <button class="btn" id="c_9">9</button>
   <button class="btn" id="c_10">10 / J / Q / K / A</button>
+  <a class="waves-effect waves-light btn-flat" id="shuffle_btn"><i class="material-icons right">autorenew</i>SHUFFLE</a>
   <pre></pre>
 
   <img src=<%=require("./static_table.png").default%> width="50%"/>
