--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,16 @@
 <body style="padding-top: 3rem;">
 
 <div class="container">
-  <span>DECKS: 6</span><br/>
-  <span style="margin-right: 17px; margin-left: 17px;">2</span>
-  <span style="margin-right: 14px; margin-left: 14px;">4</span>
-  <span style="margin-right: 14px; margin-left: 14px;">24</span>
-  <span style="margin-right: 14px; margin-left: 14px;">8</span>
-  <span style="margin-right: 10px; margin-left: 14px;">10</span>
-  <span style="margin-right: 10px; margin-left: 14px;">12</span>
-  <span style="margin-right: 10px; margin-left: 14px;">20</span>
-  <span style="margin-right: 14px; margin-left: 14px;">20</span>
-  <span style="margin-right: 14px; margin-left: 54px;">20</span>
+  <span>DECKS: 8</span><br/>
+  <span style="margin-right: 17px; margin-left: 17px;" id="card_2_remains"></span>
+  <span style="margin-right: 14px; margin-left: 14px;" id="card_3_remains"></span>
+  <span style="margin-right: 14px; margin-left: 14px;" id="card_4_remains"></span>
+  <span style="margin-right: 14px; margin-left: 14px;" id="card_5_remains"></span>
+  <span style="margin-right: 10px; margin-left: 14px;" id="card_6_remains"></span>
+  <span style="margin-right: 10px; margin-left: 14px;" id="card_7_remains"></span>
+  <span style="margin-right: 10px; margin-left: 14px;" id="card_8_remains"></span>
+  <span style="margin-right: 14px; margin-left: 14px;" id="card_9_remains"></span>
+  <span style="margin-right: 14px; margin-left: 54px;" id="card_10_remains"></span>
   <br/>
   <button class="btn" id="c_2">2</button>
   <button class="btn" id="c_3">3</button>
