--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
   <button class="btn" id="c_10">10 / J / Q / K / A</button>
   <a class="waves-effect waves-light btn-flat" id="shuffle_btn"><i class="material-icons right">autorenew</i>SHUFFLE</a>
   <pre></pre>
+  <span id="statistic"></span><br/><br/>
 
   <img src=<%=require("./static_table.png").default%> width="50%"/>
 </div>
